--- a/dev/index.html
+++ b/dev/index.html
@@ -23,7 +23,7 @@
 	<div class="page__wrapper">
 		<header class="header">
 			<div class="layout">
-				<a href="/page-list.html" class="logo">Discount cigarettes</a>
+				<a href="page-list.html" class="logo">Discount cigarettes</a>
 				<a href="#" class="trigger">
 					<span></span>
 				</a>
@@ -109,55 +109,55 @@
 					</div>
 					
 					<ul class="aside__list">
-							<li class="aside__item ">
+							<li class="aside__item "> <!-- can have class is-active -->
 								<a href="#" class="aside__link">Parliament</a>
 							</li>
-							<li class="aside__item ">
+							<li class="aside__item "> <!-- can have class is-active -->
 								<a href="#" class="aside__link">Dunhill</a>
 							</li>
-							<li class="aside__item ">
+							<li class="aside__item "> <!-- can have class is-active -->
 								<a href="#" class="aside__link">Kent</a>
 							</li>
-							<li class="aside__item ">
+							<li class="aside__item "> <!-- can have class is-active -->
 								<a href="#" class="aside__link">Sobranie</a>
 							</li>
-							<li class="aside__item ">
+							<li class="aside__item "> <!-- can have class is-active -->
 								<a href="#" class="aside__link">Mevius</a>
 							</li>
-							<li class="aside__item is-active">
+							<li class="aside__item "> <!-- can have class is-active -->
 								<a href="#" class="aside__link">Marlboro</a>
 							</li>
-							<li class="aside__item ">
+							<li class="aside__item "> <!-- can have class is-active -->
 								<a href="#" class="aside__link">Vogue</a>
 							</li>
-							<li class="aside__item ">
+							<li class="aside__item "> <!-- can have class is-active -->
 								<a href="#" class="aside__link">Camel</a>
 							</li>
-							<li class="aside__item ">
+							<li class="aside__item "> <!-- can have class is-active -->
 								<a href="#" class="aside__link">Winston</a>
 							</li>
-							<li class="aside__item ">
+							<li class="aside__item "> <!-- can have class is-active -->
 								<a href="#" class="aside__link">L&M</a>
 							</li>
-							<li class="aside__item ">
+							<li class="aside__item "> <!-- can have class is-active -->
 								<a href="#" class="aside__link">Chesterfield</a>
 							</li>
-							<li class="aside__item ">
+							<li class="aside__item "> <!-- can have class is-active -->
 								<a href="#" class="aside__link">Lucky Strike</a>
 							</li>
-							<li class="aside__item ">
+							<li class="aside__item "> <!-- can have class is-active -->
 								<a href="#" class="aside__link">Pall Mall</a>
 							</li>
-							<li class="aside__item ">
+							<li class="aside__item "> <!-- can have class is-active -->
 								<a href="#" class="aside__link">Rothmans</a>
 							</li>
-							<li class="aside__item ">
+							<li class="aside__item "> <!-- can have class is-active -->
 								<a href="#" class="aside__link">Glamour</a>
 							</li>
-							<li class="aside__item ">
+							<li class="aside__item "> <!-- can have class is-active -->
 								<a href="#" class="aside__link">LD</a>
 							</li>
-							<li class="aside__item ">
+							<li class="aside__item "> <!-- can have class is-active -->
 								<a href="#" class="aside__link">Bond</a>
 							</li>
 					</ul>
