--- a/markup/pages/page-list.html
+++ b/markup/pages/page-list.html
@@ -11,13 +11,13 @@
 		{{> header/header}}
 
 		<ol class="page-list">
-			<li><a href="/index.html">index</a></li>
-			<li><a href="/basket.html">basket</a></li>
-			<li><a href="/checkout.html">checkout</a></li>
-			<li><a href="/single.html">single</a></li>
-			<li><a href="/payment.html">payment</a></li>
-			<li><a href="/contact.html">contact</a></li>
-			<li><a href="/page.html">page</a></li>
+			<li><a href="index.html">index</a></li>
+			<li><a href="basket.html">basket</a></li>
+			<li><a href="checkout.html">checkout</a></li>
+			<li><a href="single.html">single</a></li>
+			<li><a href="payment.html">payment</a></li>
+			<li><a href="contact.html">contact</a></li>
+			<li><a href="page.html">page</a></li>
 		</ol>
 
 		<div class="page__buffer"></div>
