--- a/dev/page-list.html
+++ b/dev/page-list.html
@@ -23,7 +23,7 @@
 	<div class="page__wrapper">
 		<header class="header">
 			<div class="layout">
-				<a href="/page-list.html" class="logo">Discount cigarettes</a>
+				<a href="page-list.html" class="logo">Discount cigarettes</a>
 				<a href="#" class="trigger">
 					<span></span>
 				</a>
@@ -67,13 +67,13 @@
 		</header>
 
 		<ol class="page-list">
-			<li><a href="/index.html">index</a></li>
-			<li><a href="/basket.html">basket</a></li>
-			<li><a href="/checkout.html">checkout</a></li>
-			<li><a href="/single.html">single</a></li>
-			<li><a href="/payment.html">payment</a></li>
-			<li><a href="/contact.html">contact</a></li>
-			<li><a href="/page.html">page</a></li>
+			<li><a href="index.html">index</a></li>
+			<li><a href="basket.html">basket</a></li>
+			<li><a href="checkout.html">checkout</a></li>
+			<li><a href="single.html">single</a></li>
+			<li><a href="payment.html">payment</a></li>
+			<li><a href="contact.html">contact</a></li>
+			<li><a href="page.html">page</a></li>
 		</ol>
 
 		<div class="page__buffer"></div>
