--- a/dev/basket.html
+++ b/dev/basket.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
-	<title>sigaretes</title>
+	<title>cigarettes</title>
 	<meta content="" name="description">
 	<meta content="" name="keywords">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -156,20 +156,20 @@
 				<!-- cside -->
 				<div class="cside  top-offset">
 					<div class="basket__content">
-						<table class="basket__table">
-							<tr class="basket__row">
-								<th class="basket__col">Name</th>
-								<th class="basket__col">Amount</th>
-								<th class="basket__col">Price</th>
-								<th class="basket__col">Total</th>
-								<th class="basket__col"></th>
-							</tr>
+						<div class="basket__wrap">
+							<div class="basket__row basket__header" >
+								<div class="basket__col">Name</div>
+								<div class="basket__col">Amount</div>
+								<div class="basket__col">Price</div>
+								<div class="basket__col">Total</div>
+								<div class="basket__col"></div>
+							</div>
 							<!--  -->
-							<tr class="basket__row">
-								<td class="basket__col">
+							<div class="basket__row">
+								<div class="basket__col basket__name">
 									<h4 class="basket__title" role="heading" aria-level="4">Marlboro Red Cigarettes</h4>
-								</td>
-								<td class="basket__col">
+								</div>
+								<div class="basket__col basket__count">
 									<div class="count">
 										<div class="count__nav">
 											<div class="count__up">
@@ -190,19 +190,37 @@
 										</div>
 										<input type="tel" name="count" id="count" value="1">
 									</div>
-								</td>
-								<td class="basket__col basket__price">$ <span class="basket__cost">44.66</span></td>
-								<td class="basket__col basket__price">$ <span class="basket__total">44.66</span></td>
-								<td class="basket__col">
+								</div>
+								<div class="basket__col basket__price">
+									<div class="basket__box">
+										<div class="basket__box_item">
+											<p class="desc__kr">Price</p>
+										</div>
+										<div class="basket__box_item">
+											$ <span class="basket__cost">44.66</span>
+										</div>
+									</div>
+								</div>
+								<div class="basket__col basket__price">
+									<div class="basket__box">
+										<div class="basket__box_item">
+											<p class="desc__kr">Total</p>
+										</div>
+										<div class="basket__box_item">
+											$ <span class="basket__total">44.66</span>
+										</div>
+									</div>
+								</div>
+								<div class="basket__col basket__close">
 									<button class="btn__remove"></button>
-								</td>
-							</tr>
+								</div>
+							</div>
 							<!--  -->
-							<tr class="basket__row">
-								<td class="basket__col">
+							<div class="basket__row">
+								<div class="basket__col basket__name">
 									<h4 class="basket__title" role="heading" aria-level="4">Marlboro Red Cigarettes</h4>
-								</td>
-								<td class="basket__col">
+								</div>
+								<div class="basket__col basket__count">
 									<div class="count">
 										<div class="count__nav">
 											<div class="count__up">
@@ -223,19 +241,37 @@
 										</div>
 										<input type="tel" name="count" id="count" value="1">
 									</div>
-								</td>
-								<td class="basket__col basket__price">$ <span class="basket__cost">44.66</span></td>
-								<td class="basket__col basket__price">$ <span class="basket__total">44.66</span></td>
-								<td class="basket__col">
+								</div>
+								<div class="basket__col basket__price">
+									<div class="basket__box">
+										<div class="basket__box_item">
+											<p class="desc__kr">Price</p>
+										</div>
+										<div class="basket__box_item">
+											$ <span class="basket__cost">44.66</span>
+										</div>
+									</div>
+								</div>
+								<div class="basket__col basket__price">
+									<div class="basket__box">
+										<div class="basket__box_item">
+											<p class="desc__kr">Total</p>
+										</div>
+										<div class="basket__box_item">
+											$ <span class="basket__total">44.66</span>
+										</div>
+									</div>
+								</div>
+								<div class="basket__col basket__close">
 									<button class="btn__remove"></button>
-								</td>
-							</tr>
+								</div>
+							</div>
 							<!--  -->
-							<tr class="basket__row">
-								<td class="basket__col">
+							<div class="basket__row">
+								<div class="basket__col basket__name">
 									<h4 class="basket__title" role="heading" aria-level="4">Marlboro Gold Extre Prime Edge Flawored</h4>
-								</td>
-								<td class="basket__col">
+								</div>
+								<div class="basket__col basket__count">
 									<div class="count">
 										<div class="count__nav">
 											<div class="count__up">
@@ -256,37 +292,55 @@
 										</div>
 										<input type="tel" name="count" id="count" value="1">
 									</div>
-								</td>
-								<td class="basket__col basket__price">$ <span class="basket__cost">44.66</span></td>
-								<td class="basket__col basket__price">$ <span class="basket__total">44.66</span></td>
-								<td class="basket__col">
+								</div>
+								<div class="basket__col basket__price">
+									<div class="basket__box">
+										<div class="basket__box_item">
+											<p class="desc__kr">Price</p>
+										</div>
+										<div class="basket__box_item">
+											$ <span class="basket__cost">44.66</span>
+										</div>
+									</div>
+								</div>
+								<div class="basket__col basket__price">
+									<div class="basket__box">
+										<div class="basket__box_item">
+											<p class="desc__kr">Total</p>
+										</div>
+										<div class="basket__box_item">
+											$ <span class="basket__total">44.66</span>
+										</div>
+									</div>
+								</div>
+								<div class="basket__col basket__close">
 									<button class="btn__remove"></button>
-								</td>
-							</tr>
+								</div>
+							</div>
 							<!-- footer -->
-							<tr class="basket__row basket__footer">
-								<td class="basket__col">
-								</td>
-								<td class="basket__col">
-								</td>
-								<td class="basket__col text-right ">
+							<div class="basket__row basket__footer">
+								<div class="basket__col">
+								</div>
+								<div class="basket__col">
+								</div>
+								<div class="basket__col text-right ">
 									Total
-								</td>
-								<td class="basket__col basket__price">$ <span class="basket__total">175.32</span></td>
-								<td class="basket__col"></td>
-							</tr>
+								</div>
+								<div class="basket__col basket__price">$ <span class="basket__total">175.32</span></div>
+								<div class="basket__col basket__col_end"></div>
+							</div>
 							<!--  -->
-							<tr class="basket__row basket__footer">
-								<td class="basket__col"></td>
-								<td class="basket__col"></td>
-								<td class="basket__col text-right "></td>
-								<td class="basket__col basket__price">
+							<div class="basket__row basket__footer">
+								<div class="basket__col"></div>
+								<div class="basket__col"></div>
+								<div class="basket__col text-right "></div>
+								<div class="basket__col basket__price">
 									<button class="btn btn__bdr">Checkout</button>
-								</td>
-								<td class="basket__col"></td>
-							</tr>
+								</div>
+								<div class="basket__col basket__col_end"></div>
+							</div>
 
-						</table>
+						</div>
 					</div>
 				</div>
 				<!-- rside -->
